--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
                 <a href="" title="About" class="text-white-50">会社概要</a>
               </li>
               <li>
-                
+                <a href="" title="License informations" class="text-white-50">プライバシーポリシー</a>
               </li>
             </ul>
           </div>
